# tui-notes

./: .gitignore  README.md  pyproject.toml
docs/: sample.md  slides.md
notes/: test.md
tui_notes/: main.py
tui_notes/static/: style.tcss
tui_notes/widgets/: assistant.py  files.py  note.py
