[tool.poetry]
name = "tui-notes"
version = "0.1.0"
description = "A Python based TUI for taking notes in markdown"
authors = ["Matteo Ferrini <maf@lunar.app>"]
readme = "README.md"
include = [
    "tui_notes/static"
]

[tool.poetry.scripts]
tui-notes = "tui_notes.main:notes_app"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.89.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
